NavMenu and Font Less ugly

--- a/Eucre/Client/src/custom.css
+++ b/Eucre/Client/src/custom.css
@@ -1,4 +1,17 @@
 /* Provide sufficient contrast against white background */
+@import url("https://fonts.googleapis.com/css?family=Carrois+Gothic|Carrois+Gothic+SC&display=swap");
+
+* {
+  font-family: "Carrois Gothic", sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Carrois Gothic SC", sans-serif;
+  font-weight: 700;
+}
+
 a {
   color: #0366d6;
 }
@@ -11,4 +24,8 @@ code {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+}
+
+body {
+  margin: 0px;
 }
