NavMenu selected tab css

--- a/Eucre/Client/src/components/NavMenu/NavMenu.module.css
+++ b/Eucre/Client/src/components/NavMenu/NavMenu.module.css
@@ -37,3 +37,8 @@
 .navItem .link:hover {
   background-color: var(--dark-green);
 }
+
+.selected {
+  composes: link;
+  background-color: var(--dark-green);
+}
