--- a/client/app/src/components/Card/Card.module.css
+++ b/client/app/src/components/Card/Card.module.css
@@ -7,3 +7,119 @@
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
+.card .cardBack {
+  background-color: #62bbd3;
+  background-image: linear-gradient(
+      30deg,
+      #80c9dd 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #80c9dd 87.5%,
+      #80c9dd
+    ),
+    linear-gradient(
+      150deg,
+      #80c9dd 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #80c9dd 87.5%,
+      #80c9dd
+    ),
+    linear-gradient(
+      30deg,
+      #80c9dd 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #80c9dd 87.5%,
+      #80c9dd
+    ),
+    linear-gradient(
+      150deg,
+      #80c9dd 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #80c9dd 87.5%,
+      #80c9dd
+    ),
+    linear-gradient(
+      60deg,
+      #d5eaf0 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #d5eaf0 75%,
+      #d5eaf0
+    ),
+    linear-gradient(
+      60deg,
+      #d5eaf0 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #d5eaf0 75%,
+      #d5eaf0
+    );
+  background-size: 16px 28px;
+  background-position: 0 0, 0 0, 8px 14px, 8px 14px, 0 0, 8px 14px;
+  width: 85px;
+  height: 119px;
+}
+
+.cardContentHearts,
+.cardContentDiamonds {
+  color: red;
+}
+
+.cardContentHearts span.icon::before {
+  content: "♥";
+}
+
+.cardContentDiamonds span.icon::before {
+  content: "♦";
+}
+
+.cardContentClubs span.icon::before {
+  content: "♣";
+}
+
+.cardContentSpades span.icon::before {
+  content: "♠";
+}
+
+.cardHeader {
+  line-height: 14px;
+}
+
+.cardInner {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 90px;
+  flex-direction: column;
+  padding: 0 10px;
+  margin-top: -15px;
+}
+
+.cardInnerRow {
+  display: flex;
+  justify-content: space-around;
+  width: 55px;
+}
+
+.cardInnerRowOdd + .cardInnerRowEven {
+  margin-top: -10px;
+}
+
+.cardInnerRowEven + .cardInnerRowOdd {
+  margin-top: -10px;
+}
+
+.cardInner span.icon {
+  font-size: 26px;
+  line-height: 1;
+}
+
+.bigIcon {
+  composes: icon;
+  font-size: 40px;
+  font-family: "Arbutus Slab";
+}
