Hand component added to eucre page

--- a/client/app/src/pages/Eucre/Eucre.module.scss
+++ b/client/app/src/pages/Eucre/Eucre.module.scss
@@ -6,3 +6,13 @@
 .card {
   padding: 10px;
 }
+
+.page {
+  display: grid;
+  grid-template-rows: auto auto;
+}
+
+.handArea {
+  display: grid;
+  justify-content: center;
+}
