--- a/client/app/src/games/eucre/components/Stack/Stack.module.scss
+++ b/client/app/src/games/eucre/components/Stack/Stack.module.scss
@@ -18,4 +18,26 @@
   padding: 5px;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  .card {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .card:nth-child(2) {
+    top: 2px;
+    left: 2px;
+  }
+  .card:nth-child(3) {
+    top: 4px;
+    left: 4px;
+  }
+  .card:nth-child(4) {
+    top: 6px;
+    left: 6px;
+  }
+  .card:nth-child(5) {
+    top: 8px;
+    left: 8px;
+  }
 }
