--- a/client/app/src/games/eucre/components/Card/Card.module.scss
+++ b/client/app/src/games/eucre/components/Card/Card.module.scss
@@ -6,62 +6,62 @@
   padding: 5px;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
 
-.card .cardBack {
-  background-color: #62bbd3;
-  background-image: linear-gradient(
-      30deg,
-      #80c9dd 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #80c9dd 87.5%,
-      #80c9dd
-    ),
-    linear-gradient(
-      150deg,
-      #80c9dd 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #80c9dd 87.5%,
-      #80c9dd
-    ),
-    linear-gradient(
-      30deg,
-      #80c9dd 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #80c9dd 87.5%,
-      #80c9dd
-    ),
-    linear-gradient(
-      150deg,
-      #80c9dd 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #80c9dd 87.5%,
-      #80c9dd
-    ),
-    linear-gradient(
-      60deg,
-      #d5eaf0 25%,
-      transparent 25.5%,
-      transparent 75%,
-      #d5eaf0 75%,
-      #d5eaf0
-    ),
-    linear-gradient(
-      60deg,
-      #d5eaf0 25%,
-      transparent 25.5%,
-      transparent 75%,
-      #d5eaf0 75%,
-      #d5eaf0
-    );
-  background-size: 16px 28px;
-  background-position: 0 0, 0 0, 8px 14px, 8px 14px, 0 0, 8px 14px;
-  width: 85px;
-  height: 119px;
+  .cardBack {
+    background-color: #62bbd3;
+    background-image: linear-gradient(
+        30deg,
+        #80c9dd 12%,
+        transparent 12.5%,
+        transparent 87%,
+        #80c9dd 87.5%,
+        #80c9dd
+      ),
+      linear-gradient(
+        150deg,
+        #80c9dd 12%,
+        transparent 12.5%,
+        transparent 87%,
+        #80c9dd 87.5%,
+        #80c9dd
+      ),
+      linear-gradient(
+        30deg,
+        #80c9dd 12%,
+        transparent 12.5%,
+        transparent 87%,
+        #80c9dd 87.5%,
+        #80c9dd
+      ),
+      linear-gradient(
+        150deg,
+        #80c9dd 12%,
+        transparent 12.5%,
+        transparent 87%,
+        #80c9dd 87.5%,
+        #80c9dd
+      ),
+      linear-gradient(
+        60deg,
+        #d5eaf0 25%,
+        transparent 25.5%,
+        transparent 75%,
+        #d5eaf0 75%,
+        #d5eaf0
+      ),
+      linear-gradient(
+        60deg,
+        #d5eaf0 25%,
+        transparent 25.5%,
+        transparent 75%,
+        #d5eaf0 75%,
+        #d5eaf0
+      );
+    background-size: 16px 28px;
+    background-position: 0 0, 0 0, 8px 14px, 8px 14px, 0 0, 8px 14px;
+    width: 85px;
+    height: 119px;
+  }
 }
 
 .cardContentHearts,
@@ -97,6 +97,11 @@
   flex-direction: column;
   padding: 0 10px;
   margin-top: -15px;
+
+  span.icon {
+    font-size: 20px;
+    line-height: 1;
+  }
 }
 
 .cardInnerRow {
@@ -111,11 +116,6 @@
 
 .cardInnerRowEven + .cardInnerRowOdd {
   margin-top: -10px;
-}
-
-.cardInner span.icon {
-  font-size: 20px;
-  line-height: 1;
 }
 
 .bigIcon {
