--- a/client/app/src/games/eucre/components/Game/Game.module.scss
+++ b/client/app/src/games/eucre/components/Game/Game.module.scss
@@ -12,8 +12,8 @@
 
 .gameBody {
   display: grid;
-  grid-template-columns: 30% 40% 30%;
-  grid-template-rows: 30% 40% 30%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas:
     "description north ."
     "west play east"
